[workspace]
resolver = "2"
members  = ["packages/*", "contracts/*"]

[workspace.package]
version       = "0.20.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.81"

[workspace.dependencies]
cosmwasm-schema            = "^2.2"
cosmwasm-std               = "^2.2"
cw2                        = "^2.0"
cw20                       = "^2.0"
anyhow                     = "^1.0"
bech32                     = "^0.11"
cw721                      = { version = "*", path = "./packages/cw721" }
cw-multi-test              = { version = "^2.2", features = ["cosmwasm_2_1"] }
cw-ownable                 = { version = "^2.1" }
cw-storage-plus            = "^2.0"
cw-utils                   = "^2.0"
schemars                   = "^0.8"
serde                      = { version = "^1.0", default-features = false, features = ["derive"] }
sha2                       = "^0.10"
thiserror                  = "^1.0"
url                        = "^2.5"

[profile.release.package.cw721-base]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-expiration]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-metadata-onchain]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-fixed-price]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-non-transferable]
codegen-units = 1
incremental   = false

[profile.release.package.cw721-receiver-tester]
codegen-units = 1
incremental   = false

[profile.release.package.cw2981-royalties]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
